  at the first hard link encontered, other occurence are skipped. The
  isolated catalog gave a wrong information as it was read in direct mode
  while fetching the data and EA to compare were read in sequential mode
  without the ability to skip back to re-read a hard linked inode, this
  caused the second time comparison to be reported as failed instead of
  being flagged as skipped.

from 2.7.16 to 2.7.17
- fixed bug where -R path ending with // was breaking the path filtering
  mechanism (-P/-g/-[/-] options).
- added FAQ about HOME variable under Windows (John Slattery's feedback)
- fixed bug where repairing failed with sliced backups
- making exceptions thrown from shell_interaction class get their error
  message passed and reported to the user.


from 2.7.15 to 2.7.16
- fixed mask building of path exclusion (dar's -P option) when used with
  regular expression (problem met while testing or merging a backup)
- adding support for progressive report to repairing operation at API level
- warning before processing to the backup if gnupg signatories are provided
  without any gnupg recipient.
- fixing bug reporting the following message:
  /Subtracting an "infinint" greater than the first, "infinint" cannot be
  negative/. This was due to duplicated counter decrement while merging two
  archives and overwriting policy drives entry to be removed from the
  resulting archive adding to that, the very specific/rare condition where
  the number of removals exceeds more than the half of kept entries...
- adding kdf support for repairing operation instead of using the values of
  the archive/backup under reparation.
- fixing bug in thread_cancellation class that led a canceled thread kept
  being recorded as canceled forever, leading libdar to abort immediately
  when run in a new thread having the the same tid.
- fixing bug in libdar leading an API call to return zero instead of the
  total size of the backup/archive (not use in dar CLI).